refactor: finished filters

--- a/assets/scss/components/atoms/filter.scss
+++ b/assets/scss/components/atoms/filter.scss
@@ -40,7 +40,7 @@
           py-4
           px-3
           text-gray-700
-          text-sm;
+          text-base;
           &:hover {
             @apply
             after:absolute
