refactor: finished footer menu

--- a/assets/scss/base/html.scss
+++ b/assets/scss/base/html.scss
@@ -8,13 +8,7 @@
     line-height: 1.5;
     -webkit-text-size-adjust: 100%;
     tab-size: 4;
-    overflow: hidden;
-    height: 100%;
-  }
-
-  body {
-    height: 100%;
-    overflow: auto;
+    scroll-behavior: smooth;
   }
 
   code,
