refactor: updated file names

--- a/assets/scss/components/atoms/badge.scss
+++ b/assets/scss/components/atoms/badge.scss
@@ -229,7 +229,7 @@
         text-white;
       }
 
-      &--gray {
+      &--gray, &--default {
         @apply
         bg-gray-50
         text-gray
