--- a/assets/scss/components/organisms/navigation/header.scss
+++ b/assets/scss/components/organisms/navigation/header.scss
@@ -33,7 +33,9 @@
     &-menu-bar {
       @apply
       w-full
+      mx-6
       px-6
+      lg:mx-12
       lg:px-12
       bg-white
       border-gray-200
