Revert "feat: certficiation program page (#21)"
This reverts commit 1ca0dcc05c66306755b336712eba0d75429c90b5.

--- a/assets/scss/components/atoms/buttons.scss
+++ b/assets/scss/components/atoms/buttons.scss
@@ -37,12 +37,12 @@
         &.button-disabled,
         [attr="disabled"] {
           @apply
-          bg-gray-200
-          hover:bg-gray-400;
+          bg-primary-200
+          hover:bg-primary-400;
 
           &.button-text,
           & .button-text {
-            @apply text-gray-600;
+            @apply text-gray-200;
           }
         }
 
