--- a/assets/scss/components/molecules/megamenu.scss
+++ b/assets/scss/components/molecules/megamenu.scss
@@ -39,6 +39,7 @@
       border-0
       border-b-2
       border-transparent
+      focus:outline-none
       font-medium
       hover:no-underline
       hover:text-primary-500
