fix: sdk quizzes are added to the certification page

--- a/assets/scss/components/atoms/badge.scss
+++ b/assets/scss/components/atoms/badge.scss
@@ -80,6 +80,18 @@
       &--prod, &--none {
         @apply hidden;
       }
+
+      &--pro {
+        @apply
+        text-white
+        bg-primary-600;
+      }
+
+      &--beginner {
+        @apply
+        text-white
+        bg-secondary-600;
+      }
     }
 
 
